# rust_axum_initial

./: .gitignore  Cargo.toml
src/: app.rs  handler.rs  lib.rs  main.rs  routes.rs
