[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkg"
path = "./src/lib.rs"


[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }

